k8s/quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes
  namespace: default
spec:
  selector:
    matchLabels:
      app: quotes
  replicas: 1
  template:
    metadata:
      name: quotes
      labels:
        app: quotes
    spec:
      containers:
        - name: quotes
          ports:
            - containerPort: 5432
              name: quotes-postgres
          image: mrajcic/quotes:1.0
