k8s/quotes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotes
  namespace: default
  labels:
    app: quotes
spec:
  selector:
    app: quotes
    type: ClusterIP
  ports:
    - name: http
      port: 8080
