k8s/service.yaml
apiVersion: v2
kind: Service
metadata:
  labels:
    app: quotes-k8s
  name: quotes-k8s
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 32223
  selector:
    app: quotes-k8s
