k8s/quotes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quotes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /testpathQuotes
            pathType: Prefix
            backend:
              service:
                name: quotes
                port:
                  number: 8080
